corrected mathvista, wildvision, ifeval path, changed task and added text model for qwen2 and 2.5, changes to qwen2,2.5vl as well

--- a/lmms_eval/tasks/mathvista/mathvista_testmini_format.yaml
+++ b/lmms_eval/tasks/mathvista/mathvista_testmini_format.yaml
@@ -1,4 +1,4 @@
-dataset_path: AI4Math/MathVista
+dataset_path: /data2/xuzhiyu/datasets/MathVista
 dataset_kwargs:
   token: True
 task: "mathvista_testmini_format"
