--- a/pyproject.toml
+++ b/pyproject.toml
@@ -56,7 +56,7 @@ dependencies = [
     "pillow",
     "pyyaml",
     "sympy",
-    "latex2sympy2",
+    "latex2sympy2-extended",
     "mpmath",
     "Jinja2",
     "openpyxl",
@@ -96,7 +96,7 @@ gemini = [
     "google-generativeai",
 ]
 reka = [
-    "httpx==0.23.3",
+    "httpx>=0.23.3",
     "reka-api",
 ]
 qwen = [
