--- a/lmms_eval/tasks/mathverse_val/mathverse_testmini_vision_dominant_val.yaml
+++ b/lmms_eval/tasks/mathverse_val/mathverse_testmini_vision_dominant_val.yaml
@@ -3,8 +3,8 @@ dataset_name: vision_dominant
 dataset_kwargs:
   token: False
 
-task: "mathverse_testmini_vision_dominant_dev"
-test_split: dev
+task: "mathverse_testmini_vision_dominant_val"
+test_split: val
 output_type: generate_until
 doc_to_visual: !function utils.mathverse_doc_to_visual
 doc_to_text: !function utils.mathverse_doc_to_text
